--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.acceptSuggestionOnEnter": "on"
+    "editor.acceptSuggestionOnEnter": "on",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#2D3008",
+        "titleBar.activeBackground": "#40430B",
+        "titleBar.activeForeground": "#FAFBEA"
+    }
 }
